Replace css-sprite with sprity

--- a/src/assets/styl/includes/_sprites.styl
+++ b/src/assets/styl/includes/_sprites.styl
@@ -1,10 +1,8 @@
 .icon {
-  background-image: url('assets/images/sprite.png');
+  background-image: url("assets/images/sprite.png");
 }
-
 .icon-nodejs {
-  background-position: -4px -4px;
-  width: 2000px;
-  height: 857px;
+  background-position: -0px -0px;
+  width: 2008px;
+  height: 865px;
 }
-
